# Gradle

./: Gradle.txt
lsn10_元编程(方法合成与委托)/listener10/: build.gradle  settings.gradle
lsn11_运行时元编程/listener11/: build.gradle  settings.gradle
lsn12_Json、xml、swing与生成器/listener12/: build.gradle  settings.gradle
lsn13_Android Gradle配置/listener13/: build.gradle  settings.gradle
lsn14_Android Gradle配置/listener14/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
lsn14_Android Gradle配置/listener14/app/src/androidTest/java/com/dongnao/listener14/: ExampleInstrumentedTest.java
lsn14_Android Gradle配置/listener14/app/src/main/: AndroidManifest.xml
lsn14_Android Gradle配置/listener14/app/src/main/cpp/: native-lib.cpp
lsn14_Android Gradle配置/listener14/app/src/main/java/com/dongnao/listener14/: A.java  MainActivity.java
lsn14_Android Gradle配置/listener14/app/src/main/res/layout/: activity_main.xml
lsn14_Android Gradle配置/listener14/app/src/main/res/values-en/: strings.xml
lsn14_Android Gradle配置/listener14/app/src/main/res/values-zh/: strings.xml
lsn14_Android Gradle配置/listener14/app/src/test/java/com/dongnao/listener14/: ExampleUnitTest.java
lsn19_扩展属性、任务与构建周期/istener19/: build.gradle  gradle.properties
lsn20_自定义插件与上传本地仓库/listener20/: gradle.properties
lsn21_上传远程仓库/listener21/: gradle.properties  settings.gradle
lsn2_Groovy字符串与循环/listener2/: build.gradle  settings.gradle
lsn3_Groovy集合/listener3/: build.gradle  settings.gradle
lsn4_Groovy闭包/listener4/: build.gradle  settings.gradle
lsn5_Groovy方法/: Groovy---方法调用与操作符重载.txt
(+157 files in other folders)
